src/scss/app.scss
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,600;0,700;1,400&display=swap");

@import "./variables";
@import "./utilities";
@import "./typography";
@import "./buttons";
@import "./animations";

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
}

body {
  background-color: $bg-color;
  color: $font-color-dark;

  font-family: "Open Sans" !important;
}

h1 {
  font-size: clamp(1.25rem, 5vw, 10rem);
}

h2 {
  font-size: clamp(1rem, 2vw, 5rem);
}

a {
  color: unset;
  text-decoration: none;
}

@media screen and (max-width: 768px) {
  h1 {
    font-size: clamp(1.75rem, 6vw, 2.5rem);
  }

  h2 {
    font-size: clamp(0.9rem, 2vw, 5rem);
  }
}

